--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.OzekiSmsClient.jar=D:\\Users\\IT353S728\\Desktop\\2009_08_13_java_tcp_example\\OzekiSmsClient.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,8 +43,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
-    ${file.reference.OzekiSmsClient.jar}
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
